--- a/1/result/summer_sem.html
+++ b/1/result/summer_sem.html
@@ -39,7 +39,7 @@
             <hr>
             
             <br><br>
-            <h3>Semester 1 Result</h3><br><br>
+            <h3>Summer Semester Result</h3><br><br>
             <div class="student-info">
 
                 <p><b>Name : Gurmehar Singh Hayer[123456789]</b></p>
