--- a/1/result/sem_1.html
+++ b/1/result/sem_1.html
@@ -94,34 +94,34 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Subject 1</td>
+                        <td>ENGINEERING DRAWING(UES101)</td>
                         <td>100</td>
-                        <td>85</td>
-                        <td>A</td>
+                        <td>64.5</td>
+                        <td>B</td>
                     </tr>
                     <tr>
-                        <td>Subject 2</td>
+                        <td>MANUFACTURING PROCESSES(UES102)</td>
                         <td>100</td>
-                        <td>78</td>
-                        <td>B+</td>
+                        <td>59.7</td>
+                        <td>B</td>
                     </tr>
                     <tr>
-                        <td>Subject 3</td>
+                        <td>MATHEMATICS I(UMA010)</td>
                         <td>100</td>
-                        <td>92</td>
-                        <td>A+</td>
+                        <td>61.5</td>
+                        <td>B</td>
                     </tr>
                     <tr>
-                        <td>Subject 4</td>
+                        <td>PHYSICS(UPH013)</td>
                         <td>100</td>
-                        <td>88</td>
-                        <td>A</td>
+                        <td>54</td>
+                        <td>B</td>
                     </tr>
                     <tr>
-                        <td>Subject 5</td>
+                        <td>PROFESSIONAL COMMUNICATION(UHU003)</td>
                         <td>100</td>
-                        <td>95</td>
-                        <td>A+</td>
+                        <td>46.25</td>
+                        <td>B-</td>
                     </tr>
                 </tbody>
             </table>
