--- a/1/result/sem_2.html
+++ b/1/result/sem_2.html
@@ -94,34 +94,34 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Subject 1</td>
+                        <td>CHEMISTRY(UCB009)</td>
                         <td>100</td>
-                        <td>85</td>
-                        <td>A</td>
+                        <td>54.42</td>
+                        <td>X</td>
                     </tr>
                     <tr>
-                        <td>Subject 2</td>
+                        <td>ELECTRICAL & ELECTRONIC ENGINEERING(UES013)</td>
                         <td>100</td>
-                        <td>78</td>
-                        <td>B+</td>
+                        <td>58.8</td>
+                        <td>B</td>
                     </tr>
                     <tr>
-                        <td>Subject 3</td>
+                        <td>ENERGY AND ENVIRONMENT(UEN008)</td>
                         <td>100</td>
-                        <td>92</td>
-                        <td>A+</td>
+                        <td>60</td>
+                        <td>X</td>
                     </tr>
                     <tr>
-                        <td>Subject 4</td>
+                        <td>MATHEMATICS-II(UMA004)</td>
                         <td>100</td>
-                        <td>88</td>
-                        <td>A</td>
+                        <td>62</td>
+                        <td>A-</td>
                     </tr>
                     <tr>
-                        <td>Subject 5</td>
+                        <td>PROGRAMMING FOR PROBLEM SOLVING(UES103)</td>
                         <td>100</td>
-                        <td>95</td>
-                        <td>A+</td>
+                        <td>69</td>
+                        <td>B</td>
                     </tr>
                 </tbody>
             </table>
