--- a/1/result/summer_sem.html
+++ b/1/result/summer_sem.html
@@ -42,9 +42,9 @@
             <h3>Summer Semester Result</h3><br><br>
             <div class="student-info">
 
-                <p><b>Name : Gurmehar Singh Hayer[123456789]</b></p>
+                <p><b>Name : Gurmehar Singh Hayer[102316120]</b></p>
                 <p><b>Course/Branch : BE(COSE)</b></p>
-                <p><b>Current Semester : 4</b></p>
+                <p><b>Current Semester : 3</b></p>
 
 
 
@@ -94,35 +94,30 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Subject 1</td>
+                        <td>Electrical & Electronics</td>
                         <td>100</td>
-                        <td>85</td>
-                        <td>A</td>
+                        <td>68</td>
+                        <td>A-</td>
                     </tr>
                     <tr>
-                        <td>Subject 2</td>
+                        <td>Chemistry</td>
                         <td>100</td>
-                        <td>78</td>
-                        <td>B+</td>
+                        <td>63</td>
+                        <td>A-</td>
                     </tr>
                     <tr>
-                        <td>Subject 3</td>
+                        <td>Manufacturing Processes</td>
                         <td>100</td>
-                        <td>92</td>
-                        <td>A+</td>
+                        <td>49</td>
+                        <td>B-</td>
                     </tr>
                     <tr>
-                        <td>Subject 4</td>
+                        <td>Energy & Environment</td>
                         <td>100</td>
-                        <td>88</td>
-                        <td>A</td>
+                        <td>67</td>
+                        <td>A-</td>
                     </tr>
-                    <tr>
-                        <td>Subject 5</td>
-                        <td>100</td>
-                        <td>95</td>
-                        <td>A+</td>
-                    </tr>
+        
                 </tbody>
             </table>
             <p>This data is for Information only and can be authenticated by the academic section, TU. In case of
