--- a/1/result/summer_sem.html
+++ b/1/result/summer_sem.html
@@ -94,25 +94,25 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Electrical & Electronics</td>
+                        <td>ELECTRICAL & ELECTRONIC ENGINEERING(UES013</td>
                         <td>100</td>
                         <td>68</td>
                         <td>A-</td>
                     </tr>
                     <tr>
-                        <td>Chemistry</td>
+                        <td>CHEMISTRY(UCB009)</td>
                         <td>100</td>
                         <td>63</td>
                         <td>A-</td>
                     </tr>
                     <tr>
-                        <td>Manufacturing Processes</td>
+                        <td>MANUFACTURING PROCESSES(UES102)</td>
                         <td>100</td>
                         <td>49</td>
                         <td>B-</td>
                     </tr>
                     <tr>
-                        <td>Energy & Environment</td>
+                        <td>ENERGY AND ENVIRONMENT(UEN008)</td>
                         <td>100</td>
                         <td>67</td>
                         <td>A-</td>
