--- a/1/result/summer_sem.html
+++ b/1/result/summer_sem.html
@@ -77,7 +77,6 @@
                             <a class="dropdown-item" href="sem_2.html">Sem 2</a>
                             <a class="dropdown-item" href="summer_sem.html">Summer Sem</a>
                             <a class="dropdown-item" href="sem_3.html">Sem 3</a>
-                            <a class="dropdown-item" href="sem_4.html">Sem 4</a>
                         </div>
                     </div>
                 </div></p>
@@ -94,7 +93,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>ELECTRICAL & ELECTRONIC ENGINEERING(UES013</td>
+                        <td>ELECTRICAL & ELECTRONIC ENGINEERING(UES013)</td>
                         <td>100</td>
                         <td>68</td>
                         <td>A-</td>
