--- a/1/result/sem_3.html
+++ b/1/result/sem_3.html
@@ -42,9 +42,9 @@
             <h3>Semester 3 Result</h3><br><br>
             <div class="student-info">
 
-                <p><b>Name : Gurmehar Singh Hayer[123456789]</b></p>
+                <p><b>Name : Gurmehar Singh Hayer[102316120]</b></p>
                 <p><b>Course/Branch : BE(COSE)</b></p>
-                <p><b>Current Semester : 4</b></p>
+                <p><b>Current Semester : 3</b></p>
 
 
 
@@ -82,50 +82,7 @@
                 </div></p>
             </div>
 
-            <table>
-                <thead>
-                    <tr>
-                        <th>Subjects</th>
-                        <th>Max Marks</th>
-                        <th>Marks Obtained</th>
-                        <th>Grade</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Subject 1</td>
-                        <td>100</td>
-                        <td>85</td>
-                        <td>A</td>
-                    </tr>
-                    <tr>
-                        <td>Subject 2</td>
-                        <td>100</td>
-                        <td>78</td>
-                        <td>B+</td>
-                    </tr>
-                    <tr>
-                        <td>Subject 3</td>
-                        <td>100</td>
-                        <td>92</td>
-                        <td>A+</td>
-                    </tr>
-                    <tr>
-                        <td>Subject 4</td>
-                        <td>100</td>
-                        <td>88</td>
-                        <td>A</td>
-                    </tr>
-                    <tr>
-                        <td>Subject 5</td>
-                        <td>100</td>
-                        <td>95</td>
-                        <td>A+</td>
-                    </tr>
-                </tbody>
-            </table>
-            <p>This data is for Information only and can be authenticated by the academic section, TU. In case of
-                discrepancy, please contact AR(Academic),TU.</p>
+            <h3> <font color = "red">RESULT NOT DECLARED</font></h3>
         </main>
     </div>
 </body>
