--- a/index.html
+++ b/index.html
@@ -7,29 +7,7 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <title>Thapar University</title>
-    <!-- <script id="clientEventHandlersJS" language="javascript">
-        function UserType_onchange() {
-
-            var mUserType;
-            mUserType = LoginForm.UserType.value;
-            if (mUserType == 'S') {
-                LoginForm.txtCode.value = "Enrollment No";
-            }
-            else if (mUserType == 'E') {
-                LoginForm.txtCode.value = "Employee Code";
-            }
-            else {
-                LoginForm.txtCode.value = "Parents ID";
-            }
-        }
-
-        function MemberCode_onchange() {
-            var mUserCode;
-            mUserCode = LoginForm.MemberCode.value;
-            LoginForm.MemberCode.value = mUserCode.toUpperCase();
-        }
-
-    </script> -->
+ 
     <script type="module" src="login.js" defer></script>
     <script language="Javascript1.1">
 
@@ -40,11 +18,9 @@
             }
         }
 
-        // detect();
 
 
     </script>
-    <!-- <div id="uuidMachine">1394f5b0-c208-46e4-8eef-d41acfb9100b</div> -->
 </head>
 
 <body alink="#ff00ff" bgcolor="#d6d2d6" rightmargin="0" leftmargin="0" topmargin="0" bottommargin="0"
@@ -65,12 +41,12 @@
                     </table>
                 </td>
             </tr>
-            <!-- <tr>
+            <tr>
                 <td colspan="2" align="center">
                     <font color="white" size="2" face="verdana"><strong> WEB KIOSK (INTERNET) for
                             Parents/Students</strong></font>
                 </td>
-            </tr> -->
+            </tr>
             <tr>
                 <td style="WIDTH: 738px; HEIGHT: 81px" colspan="2">
                     <table bgcolor="#a43f06" cellpadding="0" cellspacing="0" border="0"
@@ -85,7 +61,7 @@
             </tr>
             <tr>
                 <td>
-                    <table bgcolor="#a43f06" background="centre-l.png" cellpadding="0" cellspacing="0"
+                    <table bgcolor="#a43f06" background="centre-left.jpg" cellpadding="0" cellspacing="0"
                         border="0" style="WIDTH: 430px; HEIGHT: 286px">
                         <tbody>
                             <tr>
@@ -103,16 +79,16 @@
                                 <td align="center">
                                     <input id="txtUType"
                                         style="BORDER-BOTTOM: medium none; BORDER-LEFT-STYLE: none; BORDER-RIGHT-STYLE: none; BORDER-TOP-STYLE: none; FONT-FAMILY: sans-serif; FONT-SIZE: x-small; FONT-STYLE: normal; HEIGHT: 19px; TEXT-ALIGN: right; VERTICAL-ALIGN: middle; WIDTH: 99px"
-                                        size="12" value="Member Type" name="txtuType" readonly="" tabindex="100"
+                                        size="12" value="Member Type  " name="txtuType" readonly="" tabindex="100"
                                         height="22" width="99" align="right">
                                     <select size="1" name="UserType" tabindex="1" language="Javascript"
                                         onchange="UserType_onchange()" style="VERTICAL-ALIGN: middle; WIDTH: 99px">
                                         <option value="S" selected="">Students</option>
-                                        <option value="P">Parents</option>
+                                        <!-- <option value="P">Parents</option> -->
 
                                     </select>
                                     <font color="red"><sub>*</sub></font><br>
-                                    <input readonly="" name="txtCode" value="Enrollment No" style="BORDER-BOTTOM: medium none; BORDER-LEFT-STYLE: none; BORDER-RIGHT-STYLE: none; BORDER-TOP-STYLE: none; FONT-FAMILY: sans-serif; FONT-SIZE: x-small; FONT-STYLE: normal; HEIGHT: 22px; TEXT-ALIGN: right;
+                                    <input readonly="" name="txtCode" value="Enrollment ID  " style="BORDER-BOTTOM: medium none; BORDER-LEFT-STYLE: none; BORDER-RIGHT-STYLE: none; BORDER-TOP-STYLE: none; FONT-FAMILY: sans-serif; FONT-SIZE: x-small; FONT-STYLE: normal; HEIGHT: 22px; TEXT-ALIGN: right;
           VERTICAL-ALIGN: middle; WIDTH: 99px" size="12" lowsrc="" tabindex="101" width="99">
                                     <input name="MemberCode" size="11" id="enrollmentNo" style="VERTICAL-ALIGN: middle; WIDTH: 99px">
                                     <font color="red"><sub>*</sub></font>
