--- a/1/result/sem_2.html
+++ b/1/result/sem_2.html
@@ -73,10 +73,10 @@
                                     d="M512 704c8.288 0 15.776-3.232 21.456-8.4l0.064 0.08 352-320-0.08-0.08c6.448-5.856 10.56-14.208 10.56-23.6a32 32 0 0 0-32-32c-8.288 0-15.76 3.232-21.456 8.4l-0.08-0.08L512 628.752 181.536 328.32l-0.08 0.08A31.776 31.776 0 0 0 160 320a32 32 0 0 0-32 32c0 9.376 4.112 17.744 10.544 23.6l-0.08 0.08 352 320 0.08-0.08c5.68 5.168 13.168 8.4 21.456 8.4z" />
                             </svg></button>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="sem_1.html">Sem 1</a>
-                            <a class="dropdown-item" href="sem_2.html">Sem 2</a>
-                            <a class="dropdown-item" href="summer_sem.html">Summer Sem</a>
-                            <a class="dropdown-item" href="sem_3.html">Sem 3</a>
+                            <a class="dropdown-item" href="sem_1.html">2324ODDSEM</a>
+                            <a class="dropdown-item" href="sem_2.html">2324EVENSEM</a>
+                            <a class="dropdown-item" href="summer_sem.html">SUMMERSEM</a>
+                            <a class="dropdown-item" href="sem_3.html">2425ODDSEM</a>
                         </div>
                     </div>
                 </div></p>
@@ -86,6 +86,7 @@
                 <thead>
                     <tr>
                         <th>Subjects</th>
+                        <th>Exam Code</th>
                         <th>Max Marks</th>
                         <th>Marks Obtained</th>
                         <th>Grade</th>
@@ -94,30 +95,35 @@
                 <tbody>
                     <tr>
                         <td>CHEMISTRY(UCB009)</td>
+                        <td>2324EVENSEM</td>
                         <td>100</td>
                         <td>54.42</td>
                         <td>X</td>
                     </tr>
                     <tr>
                         <td>ELECTRICAL & ELECTRONIC ENGINEERING(UES013)</td>
+                        <td>2324EVENSEM</td>
                         <td>100</td>
                         <td>58.8</td>
                         <td>B</td>
                     </tr>
                     <tr>
                         <td>ENERGY AND ENVIRONMENT(UEN008)</td>
+                        <td>2324EVENSEM</td>
                         <td>100</td>
                         <td>60</td>
                         <td>X</td>
                     </tr>
                     <tr>
                         <td>MATHEMATICS-II(UMA004)</td>
+                        <td>2324EVENSEM</td>
                         <td>100</td>
                         <td>62</td>
                         <td>A-</td>
                     </tr>
                     <tr>
                         <td>PROGRAMMING FOR PROBLEM SOLVING(UES103)</td>
+                        <td>2324EVENSEM</td>
                         <td>100</td>
                         <td>69</td>
                         <td>B</td>
