--- a/1/result/sem_1.html
+++ b/1/result/sem_1.html
@@ -73,10 +73,10 @@
                                     d="M512 704c8.288 0 15.776-3.232 21.456-8.4l0.064 0.08 352-320-0.08-0.08c6.448-5.856 10.56-14.208 10.56-23.6a32 32 0 0 0-32-32c-8.288 0-15.76 3.232-21.456 8.4l-0.08-0.08L512 628.752 181.536 328.32l-0.08 0.08A31.776 31.776 0 0 0 160 320a32 32 0 0 0-32 32c0 9.376 4.112 17.744 10.544 23.6l-0.08 0.08 352 320 0.08-0.08c5.68 5.168 13.168 8.4 21.456 8.4z" />
                             </svg></button>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="sem_1.html">Sem 1</a>
-                            <a class="dropdown-item" href="sem_2.html">Sem 2</a>
-                            <a class="dropdown-item" href="summer_sem.html">Summer Sem</a>
-                            <a class="dropdown-item" href="sem_3.html">Sem 3</a>
+                            <a class="dropdown-item" href="sem_1.html">2324ODDSEM</a>
+                            <a class="dropdown-item" href="sem_2.html">2324EVENSEM</a>
+                            <a class="dropdown-item" href="summer_sem.html">SUMMERSEM</a>
+                            <a class="dropdown-item" href="sem_3.html">2425ODDSEM</a>
                         </div>
                     </div>
                 </div></p>
@@ -86,6 +86,7 @@
                 <thead>
                     <tr>
                         <th>Subjects</th>
+                        <th>Exam Code</th>
                         <th>Max Marks</th>
                         <th>Marks Obtained</th>
                         <th>Grade</th>
@@ -94,30 +95,35 @@
                 <tbody>
                     <tr>
                         <td>ENGINEERING DRAWING(UES101)</td>
+                        <td>2324ODDSEM</td>
                         <td>100</td>
                         <td>64.5</td>
                         <td>B</td>
                     </tr>
                     <tr>
                         <td>MANUFACTURING PROCESSES(UES102)</td>
+                        <td>2324ODDSEM</td>
                         <td>100</td>
                         <td>59.7</td>
                         <td>B</td>
                     </tr>
                     <tr>
                         <td>MATHEMATICS I(UMA010)</td>
+                        <td>2324ODDSEM</td>
                         <td>100</td>
                         <td>61.5</td>
                         <td>B</td>
                     </tr>
                     <tr>
                         <td>PHYSICS(UPH013)</td>
+                        <td>2324ODDSEM</td>
                         <td>100</td>
                         <td>54</td>
                         <td>B</td>
                     </tr>
                     <tr>
                         <td>PROFESSIONAL COMMUNICATION(UHU003)</td>
+                        <td>2324ODDSEM</td>
                         <td>100</td>
                         <td>46.25</td>
                         <td>B-</td>
