--- a/1/result/sem_2.html
+++ b/1/result/sem_2.html
@@ -38,8 +38,8 @@
             <h2>Student Grade Card(Eventwise)</h2>
             <hr>
             
-            <br><br>
-            <h3>Semester 2 Result</h3><br><br>
+            <br>
+            <!-- <h3>Semester 2 Result</h3><br><br> -->
             <div class="student-info">
 
                 <p><b>Name : Gurmehar Singh Hayer[102316120]</b></p>
@@ -85,7 +85,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Subjects</th>
+                        <th style="text-align: left;">Subjects</th>
                         <th>Exam Code</th>
                         <th>Max Marks</th>
                         <th>Marks Obtained</th>
@@ -94,35 +94,35 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>CHEMISTRY(UCB009)</td>
+                        <td style="text-align: left;">CHEMISTRY(UCB009)</td>
                         <td>2324EVENSEM</td>
                         <td>100</td>
                         <td>54.42</td>
                         <td>X</td>
                     </tr>
                     <tr>
-                        <td>ELECTRICAL & ELECTRONIC ENGINEERING(UES013)</td>
+                        <td style="text-align: left;">ELECTRICAL & ELECTRONIC ENGINEERING(UES013)</td>
                         <td>2324EVENSEM</td>
                         <td>100</td>
                         <td>58.8</td>
                         <td>B</td>
                     </tr>
                     <tr>
-                        <td>ENERGY AND ENVIRONMENT(UEN008)</td>
+                        <td style="text-align: left;">ENERGY AND ENVIRONMENT(UEN008)</td>
                         <td>2324EVENSEM</td>
                         <td>100</td>
                         <td>60</td>
                         <td>X</td>
                     </tr>
                     <tr>
-                        <td>MATHEMATICS-II(UMA004)</td>
+                        <td style="text-align: left;">MATHEMATICS-II(UMA004)</td>
                         <td>2324EVENSEM</td>
                         <td>100</td>
                         <td>62</td>
                         <td>A-</td>
                     </tr>
                     <tr>
-                        <td>PROGRAMMING FOR PROBLEM SOLVING(UES103)</td>
+                        <td style="text-align: left;">PROGRAMMING FOR PROBLEM SOLVING(UES103)</td>
                         <td>2324EVENSEM</td>
                         <td>100</td>
                         <td>69</td>
