--- a/1/result/sem_3.html
+++ b/1/result/sem_3.html
@@ -38,8 +38,8 @@
             <h2>Student Grade Card(Eventwise)</h2>
             <hr>
             
-            <br><br>
-            <h3>Semester 3 Result</h3><br><br>
+            <br>
+            <!-- <h3>Semester 3 Result</h3><br><br> -->
             <div class="student-info">
 
                 <p><b>Name : Gurmehar Singh Hayer[102316120]</b></p>
