--- a/1/result/summer_sem.html
+++ b/1/result/summer_sem.html
@@ -38,8 +38,8 @@
             <h2>Student Grade Card(Eventwise)</h2>
             <hr>
             
-            <br><br>
-            <h3>Summer Semester Result</h3><br><br>
+            <br>
+            <!-- <h3>Summer Semester Result</h3><br><br> -->
             <div class="student-info">
 
                 <p><b>Name : Gurmehar Singh Hayer[102316120]</b></p>
@@ -85,7 +85,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Subjects</th>
+                        <th style="text-align: left;">Subjects</th>
                         <TH>Exam Code</TH>
                         <th>Max Marks</th>
                         <th>Marks Obtained</th>
@@ -94,28 +94,28 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>ELECTRICAL & ELECTRONIC ENGINEERING(UES013)</td>
+                        <td style="text-align: left;">ELECTRICAL & ELECTRONIC ENGINEERING(UES013)</td>
                         <td>SUMMERSEM</td>
                         <td>100</td>
                         <td>68</td>
                         <td>A-</td>
                     </tr>
                     <tr>
-                        <td>CHEMISTRY(UCB009)</td>
+                        <td style="text-align: left;">CHEMISTRY(UCB009)</td>
                         <td>SUMMERSEM</td>
                         <td>100</td>
                         <td>63</td>
                         <td>A-</td>
                     </tr>
                     <tr>
-                        <td>MANUFACTURING PROCESSES(UES102)</td>
+                        <td style="text-align: left;">MANUFACTURING PROCESSES(UES102)</td>
                         <td>SUMMERSEM</td>
                         <td>100</td>
                         <td>49</td>
                         <td>B-</td>
                     </tr>
                     <tr>
-                        <td>ENERGY AND ENVIRONMENT(UEN008)</td>
+                        <td style="text-align: left;">ENERGY AND ENVIRONMENT(UEN008)</td>
                         <td>SUMMERSEM</td>
                         <td>100</td>
                         <td>67</td>
