--- a/2/result/sem_1.html
+++ b/2/result/sem_1.html
@@ -42,7 +42,7 @@
             <!-- <h3>Semester 1 Result</h3><br><br> -->
             <div class="student-info">
 
-                <p><b>Name : Gurmehar Singh Hayer[102316120]</b></p>
+                <p><b>Name : Piyush Sharma[102316188]</b></p>
                 <p><b>Course/Branch : BE(COSE)</b></p>
                 <p><b>Current Semester : 3</b></p>
 
@@ -97,36 +97,36 @@
                         <td style="text-align: left;">ENGINEERING DRAWING(UES101)</td>
                         <td>2324ODDSEM</td>
                         <td>100</td>
-                        <td>64.5</td>
-                        <td>B</td>
+                        <td>75</td>
+                        <td>A-</td>
                     </tr>
                     <tr>
                         <td style="text-align: left;">MANUFACTURING PROCESSES(UES102)</td>
                         <td>2324ODDSEM</td>
                         <td>100</td>
-                        <td>59.7</td>
+                        <td>69</td>
                         <td>B</td>
                     </tr>
                     <tr>
                         <td style="text-align: left;">MATHEMATICS I(UMA010)</td>
                         <td>2324ODDSEM</td>
                         <td>100</td>
-                        <td>61.5</td>
-                        <td>B</td>
+                        <td>78</td>
+                        <td>A-</td>
                     </tr>
                     <tr>
                         <td style="text-align: left;">PHYSICS(UPH013)</td>
                         <td>2324ODDSEM</td>
                         <td>100</td>
-                        <td>54</td>
+                        <td>62</td>
                         <td>B</td>
                     </tr>
                     <tr>
                         <td style="text-align: left;">PROFESSIONAL COMMUNICATION(UHU003)</td>
                         <td>2324ODDSEM</td>
                         <td>100</td>
-                        <td>46.25</td>
-                        <td>B-</td>
+                        <td>80</td>
+                        <td>A</td>
                     </tr>
                 </tbody>
             </table>
