--- a/2/result/sem_2.html
+++ b/2/result/sem_2.html
@@ -39,10 +39,10 @@
             <hr>
             
             <br>
-            <!-- <h3>Semester 1 Result</h3><br><br> -->
+            <!-- <h3>Semester 2 Result</h3><br><br> -->
             <div class="student-info">
 
-                <p><b>Name : Gurmehar Singh Hayer[102316120]</b></p>
+                <p><b>Name : Piyush Sharma[102316188]</b></p>
                 <p><b>Course/Branch : BE(COSE)</b></p>
                 <p><b>Current Semester : 3</b></p>
 
@@ -94,39 +94,39 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td style="text-align: left;">ENGINEERING DRAWING(UES101)</td>
-                        <td>2324ODDSEM</td>
+                        <td style="text-align: left;">CHEMISTRY(UCB009)</td>
+                        <td>2324EVENSEM</td>
                         <td>100</td>
-                        <td>64.5</td>
+                        <td>68</td>
                         <td>B</td>
                     </tr>
                     <tr>
-                        <td style="text-align: left;">MANUFACTURING PROCESSES(UES102)</td>
-                        <td>2324ODDSEM</td>
+                        <td style="text-align: left;">ELECTRICAL & ELECTRONIC ENGINEERING(UES013)</td>
+                        <td>2324EVENSEM</td>
                         <td>100</td>
-                        <td>59.7</td>
-                        <td>B</td>
+                        <td>75</td>
+                        <td>A-</td>
                     </tr>
                     <tr>
-                        <td style="text-align: left;">MATHEMATICS I(UMA010)</td>
-                        <td>2324ODDSEM</td>
+                        <td style="text-align: left;">ENERGY AND ENVIRONMENT(UEN008)</td>
+                        <td>2324EVENSEM</td>
                         <td>100</td>
-                        <td>61.5</td>
-                        <td>B</td>
+                        <td>75</td>
+                        <td>A-</td>
                     </tr>
                     <tr>
-                        <td style="text-align: left;">PHYSICS(UPH013)</td>
-                        <td>2324ODDSEM</td>
+                        <td style="text-align: left;">MATHEMATICS-II(UMA004)</td>
+                        <td>2324EVENSEM</td>
                         <td>100</td>
-                        <td>54</td>
-                        <td>B</td>
+                        <td>62</td>
+                        <td>A-</td>
                     </tr>
                     <tr>
-                        <td style="text-align: left;">PROFESSIONAL COMMUNICATION(UHU003)</td>
-                        <td>2324ODDSEM</td>
+                        <td style="text-align: left;">PROGRAMMING FOR PROBLEM SOLVING(UES103)</td>
+                        <td>2324EVENSEM</td>
                         <td>100</td>
-                        <td>46.25</td>
-                        <td>B-</td>
+                        <td>69</td>
+                        <td>B</td>
                     </tr>
                 </tbody>
             </table>
