--- a/2/result/sem_3.html
+++ b/2/result/sem_3.html
@@ -39,10 +39,10 @@
             <hr>
             
             <br>
-            <!-- <h3>Semester 1 Result</h3><br><br> -->
+            <!-- <h3>Semester 3 Result</h3><br><br> -->
             <div class="student-info">
 
-                <p><b>Name : Gurmehar Singh Hayer[102316120]</b></p>
+                <p><b>Name : Piyush Sharma[102316188]</b></p>
                 <p><b>Course/Branch : BE(COSE)</b></p>
                 <p><b>Current Semester : 3</b></p>
 
@@ -82,56 +82,7 @@
                 </div></p>
             </div>
 
-            <table>
-                <thead>
-                    <tr>
-                        <th style="text-align: left;">Subjects</th>
-                        <th>Exam Code</th>
-                        <th>Max Marks</th>
-                        <th>Marks Obtained</th>
-                        <th>Grade</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td style="text-align: left;">ENGINEERING DRAWING(UES101)</td>
-                        <td>2324ODDSEM</td>
-                        <td>100</td>
-                        <td>64.5</td>
-                        <td>B</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: left;">MANUFACTURING PROCESSES(UES102)</td>
-                        <td>2324ODDSEM</td>
-                        <td>100</td>
-                        <td>59.7</td>
-                        <td>B</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: left;">MATHEMATICS I(UMA010)</td>
-                        <td>2324ODDSEM</td>
-                        <td>100</td>
-                        <td>61.5</td>
-                        <td>B</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: left;">PHYSICS(UPH013)</td>
-                        <td>2324ODDSEM</td>
-                        <td>100</td>
-                        <td>54</td>
-                        <td>B</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: left;">PROFESSIONAL COMMUNICATION(UHU003)</td>
-                        <td>2324ODDSEM</td>
-                        <td>100</td>
-                        <td>46.25</td>
-                        <td>B-</td>
-                    </tr>
-                </tbody>
-            </table>
-            <p>This data is for Information only and can be authenticated by the academic section, TU. In case of
-                discrepancy, please contact AR(Academic),TU.</p>
+            <h3> <font color = "red">RESULT NOT DECLARED</font></h3>
         </main>
     </div>
 </body>
