--- a/2/result/summer_sem.html
+++ b/2/result/summer_sem.html
@@ -39,10 +39,10 @@
             <hr>
             
             <br>
-            <!-- <h3>Semester 1 Result</h3><br><br> -->
+            <!-- <h3>Summer Semester Result</h3><br><br> style="text-align: left;" -->
             <div class="student-info">
 
-                <p><b>Name : Gurmehar Singh Hayer[102316120]</b></p>
+                <p><b>Name : Piyush Sharma[102316188]</b></p>
                 <p><b>Course/Branch : BE(COSE)</b></p>
                 <p><b>Current Semester : 3</b></p>
 
@@ -86,7 +86,7 @@
                 <thead>
                     <tr>
                         <th style="text-align: left;">Subjects</th>
-                        <th>Exam Code</th>
+                        <TH>Exam Code</TH>
                         <th>Max Marks</th>
                         <th>Marks Obtained</th>
                         <th>Grade</th>
@@ -94,40 +94,34 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td style="text-align: left;">ENGINEERING DRAWING(UES101)</td>
-                        <td>2324ODDSEM</td>
+                        <td style="text-align: left;">ELECTRICAL & ELECTRONIC ENGINEERING(UES013)</td>
+                        <td>SUMMERSEM</td>
                         <td>100</td>
-                        <td>64.5</td>
-                        <td>B</td>
+                        <td>68</td>
+                        <td>A-</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: left;">CHEMISTRY(UCB009)</td>
+                        <td>SUMMERSEM</td>
+                        <td>100</td>
+                        <td>63</td>
+                        <td>A-</td>
                     </tr>
                     <tr>
                         <td style="text-align: left;">MANUFACTURING PROCESSES(UES102)</td>
-                        <td>2324ODDSEM</td>
+                        <td>SUMMERSEM</td>
                         <td>100</td>
-                        <td>59.7</td>
-                        <td>B</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: left;">MATHEMATICS I(UMA010)</td>
-                        <td>2324ODDSEM</td>
-                        <td>100</td>
-                        <td>61.5</td>
-                        <td>B</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: left;">PHYSICS(UPH013)</td>
-                        <td>2324ODDSEM</td>
-                        <td>100</td>
-                        <td>54</td>
-                        <td>B</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: left;">PROFESSIONAL COMMUNICATION(UHU003)</td>
-                        <td>2324ODDSEM</td>
-                        <td>100</td>
-                        <td>46.25</td>
+                        <td>49</td>
                         <td>B-</td>
                     </tr>
+                    <tr>
+                        <td style="text-align: left;">ENERGY AND ENVIRONMENT(UEN008)</td>
+                        <td>SUMMERSEM</td>
+                        <td>100</td>
+                        <td>67</td>
+                        <td>A-</td>
+                    </tr>
+        
                 </tbody>
             </table>
             <p>This data is for Information only and can be authenticated by the academic section, TU. In case of
