--- a/3/result/summer_sem.html
+++ b/3/result/summer_sem.html
@@ -42,7 +42,7 @@
             <!-- <h3>Summer Semester Result</h3><br><br> style="text-align: left;" -->
             <div class="student-info">
 
-                <p><b>Name : Piyush Sharma[102316188]</b></p>
+                <p><b>Name : Abhay Gupta[102316100]</b></p>
                 <p><b>Course/Branch : BE(COSE)</b></p>
                 <p><b>Current Semester : 3</b></p>
 
