--- a/4/result/sem_1.html
+++ b/4/result/sem_1.html
@@ -42,7 +42,7 @@
             <!-- <h3>Semester 1 Result</h3><br><br> -->
             <div class="student-info">
 
-                <p><b>Name : Piyush Sharma[102316188]</b></p>
+                <p><b>Name : Bhavesh Singh[102316110]</b></p>
                 <p><b>Course/Branch : BE(COSE)</b></p>
                 <p><b>Current Semester : 3</b></p>
 
